--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
 <body>
     <header class="cabeçalho">
         <div class="conteiner">
-           <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+            <input type=”checkbox” id=”menu” class=”container__botao”>
+            <label for=”menu”>
+                <span class=”cabeçalho__menu hamburguer container__imagem”></span>
+            </label>
+            <ul class="lista-menu>
+                <li class="lista-menu__titulo">categorias</li>
+                <li class="lista-menu__item">
+                    <a href="#"  class="lista-menu__link">programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#"
+
+
+
+
+            </ul>
             <img src="img/Logo.svg" alt="Logo" class="container__imagem">
         </div>
         <div class="conteiner">
